# wip-rust-ac-proto

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TODO  game.xml  network.xml  plan.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/acprotocol/: Cargo.toml  build.rs
crates/acprotocol/src/: cli.rs  cli_helper.rs  constants.rs  filter.rs  generated.rs  lib.rs  packet_flags.rs  parsing_context.rs  parsing_stats.rs  tree.rs
crates/acprotocol/src/cli/: mod.rs  tui.rs
crates/acprotocol/src/cli/pcap/: processing.rs
crates/acprotocol/src/dat/: icon.rs  mod.rs  utils.rs
crates/acprotocol/src/dat/enums/: dat_database_type.rs  dat_file_type.rs  mod.rs  surface_pixel_format.rs
crates/acprotocol/src/dat/file_types/: dat_file.rs  mod.rs  texture.rs
crates/acprotocol/src/dat/reader/: dat_block_reader.rs  dat_file_reader.rs  file_reader.rs  http_reader.rs  mod.rs  range_reader.rs  sync_dat_file_reader.rs  sync_file_reader.rs  worker_r2_reader.rs
crates/acprotocol/src/dat/reader/types/: dat_block.rs  dat_database.rs  dat_database_header.rs  dat_directory.rs  dat_directory_entry.rs  dat_directory_header.rs  mod.rs
crates/acprotocol/src/enums/: mod.rs
crates/acprotocol/src/network/: debug.rs  fragment_impl.rs  message.rs  message_parser.rs  mod.rs  packet.rs  packet_parser.rs  pcap.rs  raw_message.rs  reader.rs  unified_message.rs
crates/acprotocol/src/readers/: alignment.rs  mod.rs  tracked_reader.rs
crates/acprotocol/src/types/: c2s.rs  common.rs  s2c.rs
crates/acprotocol/src/writers/: alignment.rs  mod.rs  traits.rs
crates/acprotocol/tests/: pcap_roundtrip_test.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: codegen.rs  field_gen.rs  identifiers.rs  lib.rs  type_utils.rs  types.rs  util.rs  xml_parser.rs
crates/codegen/src/generation/: context.rs  enum_generation.rs  helpers.rs  message_generation.rs  mod.rs  type_generation.rs  unified_message_generation.rs
crates/codegen/src/generation/read_generation/: collection_readers.rs  expression_readers.rs  mod.rs  primitive_readers.rs
crates/codegen/src/generation/reader_generation/: mod.rs  struct_readers.rs  variant_readers.rs
crates/codegen/src/generation/write_generation/: collection_writers.rs  expression_writers.rs  mod.rs  primitive_writers.rs
crates/codegen/src/generation/writer_generation/: mod.rs  struct_writers.rs  variant_writers.rs
crates/codegen/src/xml/: mod.rs
crates/codegen/src/xml/tags/: process_align_tag.rs  process_enum_start_tag.rs  process_field_tag.rs  process_subfield_tag.rs  process_switch_tag.rs  process_table_tag.rs  process_vector_tag.rs
crates/codegen/src/xml/utils/: add_field_to_set.rs  create_field_from_tag.rs
crates/codegen/src/xml_parsers/: control_parsers.rs  field_parsers.rs  structure_parsers.rs
crates/genlib/src/: codegen.rs  field_gen.rs  generation.rs  identifiers.rs  lib.rs  type_utils.rs  types.rs  util.rs  xml_parser.rs
crates/genlib/src/generation/: enum_generation.rs  helpers.rs  message_parser_generation.rs  mod.rs  read_generation.rs  reader_generation.rs  type_generation.rs  types.rs
crates/genlib/src/generation/read_generation/: collection_readers.rs  mod.rs  primitive_readers.rs
crates/genlib/src/generation/reader_generation/: variant_readers.rs
crates/genlib/src/xml/: mod.rs
crates/genlib/src/xml/tags/: process_align_tag.rs  process_case_tag.rs  process_enum_start_tag.rs  process_enum_value_tag.rs  process_field_tag.rs  process_subfield_tag.rs  process_switch_tag.rs  process_table_tag.rs  process_type_tag.rs  process_vector_tag.rs
crates/genlib/src/xml/utils/: add_field_to_set.rs  create_field_from_tag.rs
crates/genlib/src/xml_parsers/: control_parsers.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: generate.rs  main.rs
pcap-cli/: RawDataCapture.cs
test-harness/: test.sh
test-harness/csharp-tester/: Program.cs  csharp-tester.csproj
test-harness/rust-tester/: Cargo.toml  protocol.txt
test-harness/rust-tester/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
