[workspace]
resolver = "2"
members = [
  "crates/acprotocol",
  "crates/codegen",
  "crates/xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Workspace for Asheron's Call potocol parser"
repository = "https://github.com/amoeba/wip-rust-ac-proto"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
bitflags = { version = "2.6", features = ["serde"] }
env = "1.0.1"
env_logger = "0.11"
log = "0.4"
num_enum = "0.7"
quick-xml = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
