[package]
name = "acprotocol"
version.workspace = true
edition.workspace = true
description = "Asheron's Call Protocol"
repository.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
bitflags = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
codegen = { path = "../codegen" }
env_logger = { workspace = true }

[features]
default = []
