[package]
name = "acprotocol"
version.workspace = true
edition.workspace = true
description = "Asheron's Call Protocol"
repository.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "pcap"
path = "src/bin/pcap.rs"
required-features = ["cli"]

[[bin]]
name = "dat"
path = "src/bin/dat.rs"
required-features = ["dat-tokio"]

[dependencies]
anyhow = { workspace = true }
bitflags = { workspace = true }
byteorder = "1.5.0"
clap = { version = "4.5", features = ["derive"], optional = true }
crossterm = { version = "0.28", optional = true }
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3.31", optional = true }
image = { version = "0.25.5", features = ["png"], optional = true }
num-derive = "0.4.2"
num_enum = { workspace = true }
num-traits = "0.2.19"
ratatui = { version = "0.28", optional = true }
reqwest = { version = "0.12.15", optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.44.1", features = [
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread"
], optional = true }
tokio-util = { version = "0.7.15", features = ["compat"], optional = true }
worker = { version = "0.6.1", optional = true }

[build-dependencies]
codegen = { path = "../codegen" }
env_logger = { workspace = true }

[features]
default = []
cli = ["dep:clap", "dep:crossterm", "dep:ratatui", "dep:serde_json"]
# TODO: Not sure about these yet
dat = ["dat-tokio"]
dat-cloudflare = ["dat-tokio", "dep:worker"]
dat-core = ["dep:clap", "dep:futures", "dep:futures-util"]
dat-export = ["dep:image"]
dat-http = ["dat-tokio", "dep:reqwest"]
dat-tokio = ["dat-core", "dep:tokio", "dep:tokio-util"]
