[package]
name = "acprotocol"
version.workspace = true
edition.workspace = true
description = "Asheron's Call Protocol"
repository.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "pcap"
path = "src/bin/cmd_pcap.rs"
required-features = ["cli"]

[[bin]]
name = "dat"
path = "src/bin/cmd_dat.rs"
required-features = ["dat-export", "dat-tokio"]

[dependencies]
anyhow = { workspace = true }
bitflags = { workspace = true }
byteorder = "1.5.0"
clap = { version = "4.5", features = ["derive"], optional = true }
crossterm = { version = "0.28", optional = true }
encoding_rs = "0.8"
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3.31", optional = true }
hex = "0.4"
image = { version = "0.25.5", features = ["png"], optional = true }
num-derive = "0.4.2"
num_enum = { workspace = true }
num-traits = "0.2.19"
ratatui = { version = "0.28", optional = true }
reqwest = { version = "0.12.15", optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
strum = { version = "0.27.1", features = ["derive"] }
tokio-util = { version = "0.7.15", default-features = false, features = ["compat"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
worker = { version = "0.7.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.44.1", features = [
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread"
], default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.44.1", features = [
  "io-util",
  "macros",
  "rt"
], default-features = false, optional = true }

[build-dependencies]
codegen = { path = "../codegen" }
env_logger = { workspace = true }

[features]
default = []
cli = [
  "dep:clap",
  "dep:crossterm",
  "dep:ratatui",
  "dep:serde_json",
  "tracing",
  "dep:tracing-subscriber"
]
# TODO: Not sure about these yet
dat = ["dat-tokio"]
dat-cloudflare = ["dat-tokio", "dep:worker"]
dat-core = ["dep:clap", "dep:futures", "dep:futures-util"]
dat-export = ["dep:image"]
dat-http = ["dat-tokio", "dep:reqwest"]
dat-tokio = ["dat-core", "dep:tokio", "dep:tokio-util"]
tracing = ["dep:tracing"]
