[package]
name = "codegen"
version.workspace = true
edition.workspace = true
description = "codegen crate for acprotocol crate"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
quick-xml = { workspace = true }
