[package]
name = "xtask"
version.workspace = true
edition.workspace = true
description = "xtask crate for worksapce"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
codegen = { path = "../codegen" }
env = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
